# localRagChat

./: .env.example  .gitignore  CHANGELOG.md  INSTALL.md  README.md  debug_storage.py  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test.py  test1.py  view_conversations.py
src/: __init__.py  auth.py  chat.py  config.py  memory.py  models.py  storage.py
src/api/: __init__.py  chat_service.py  main.py  models.py
src/configs/: __init__.py  app.py  chat.py  debug.py  models.py
src/core/: __init__.py  app.py  temp_app.py
src/factories/: __init__.py  model.py  storage.py
src/interfaces/: __init__.py  model.py
src/memory/: __init__.py  rolling_chat_memory.py
src/models/: __init__.py  dialogpt.py  mistral.py
src/storage/: __init__.py  chromadb_store.py  pgvector_store.py  vector_store_interface.py
src/utils/: __init__.py  graceful_session_manager.py  logger.py
tests/: conftest.py
tests/factories/: test_model.py  test_storage.py
tests/integration/: test_app_integration.py
