[project]
name = "localragchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "chromadb>=1.1.1",
    "huggingface-hub>=0.35.3",
    "pip-tools>=7.5.1",
    "protobuf>=6.32.1",
    "psycopg>=3.2.10",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.1",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
    "transformers>=4.57.0",
    "types-requests>=2.32.4.20250913",
    "types-torch>=0.1.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
